--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,9 +1,9 @@
 .main {
-  display: flex;
+  display: block;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
+  padding: 10rem;
   min-height: 100vh;
 }
 
